<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/menu_contact" />
    </group>

    <item android:title="From Developer">
        <menu>
            <item
                android:id="@+id/nav_updates"
                android:icon="@drawable/ic_fiber_new_black_24dp"
                android:title="@string/menu_updates" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
